opam-version: "2.0"
maintainer: "Aria Fallah"
authors: ["Aria Fallah"]
homepage: "https://github.com/AriaFallah/ppx_str/"
license: "MIT"
bug-reports: "https://github.com/AriaFallah/ppx_str/issues"
synopsis: "PPX for template strings"
tags: ["ppx" "text"]

depends: [
  "ocaml" {>= "4.03"}
  "dune" {build}
  "ppxlib"
  "ppx_inline_test"
]

build: [
  [ "jbuilder" "build" "-p" name "-j" jobs "@install" ]
]
